--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -1,9 +1,9 @@
+<div fxFlex fxLayout="column" class="card-3 grey-light-bg" [style.margin]="'8px'" [style.padding]="'8px'">
 
-<div class="containerX" id="container">
+  <div fxFlex="0 1 auto" fxLayoutAlign="center" class="grey-dark-bg primary-light-fg"><h1>Registration</h1></div>
   <div
-    class="container"
     fxLayout="column"
-    fxFlex="1 1 50%">
+    fxFlex>
     <mat-form-field>
       <mat-label>Email</mat-label>
       <input required matInput [formControl]="email">
