--- a/frontend/src/app/components/register/register.component.css
+++ b/frontend/src/app/components/register/register.component.css
@@ -1,22 +1,3 @@
-#container {
-	width: 100%;
-	height:75%;
-	background-color: #f4f5f7;
-	position: absolute;
-	left: 0px;
-	top: 70px;
-}
-
-#fieldContainer {
-	width: 70%;
-	height: 50%;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	margin: auto;
-}
 
 .error {
 	color: red;
@@ -28,6 +9,10 @@ label {
 }
 
 
-
+:host{
+  display: flex;
+  flex-direction: row;
+  flex: 1 1 auto;
+}
 
 
