--- a/frontend/src/app/components/teams-home/teams-home.component.html
+++ b/frontend/src/app/components/teams-home/teams-home.component.html
@@ -19,6 +19,9 @@
     <li>
       <a (click)="navigate('teams/match')">Find Match</a>
     </li>
+    <li>
+			<a (click)="navigate('teams/matches/current')">Your Matches</a>
+		</li>
 
 
 	</ul>
