--- a/frontend/src/app/components/locations/location/location.component.html
+++ b/frontend/src/app/components/locations/location/location.component.html
@@ -19,10 +19,12 @@
     <mat-datetimepicker #startDatePicker type="datetime" openOnFocus="true" timeInterval="5"></mat-datetimepicker>
   </mat-form-field>
 
- 
+    <br/>
+    <label id="responseLabel" class="error">{{responseMessage}}</label>
+    <br />
   	<button mat-button (click)=addEvent()>Submit</button>
-  
-  
+
+
   <input id="lat" [(ngModel)]="locationCoords.lat" type="number" style="display: none"/>
   <input id="lng" [(ngModel)]="locationCoords.lng" type="number" style="display: none"/>
 </div>
